--- a/views/default/board.html
+++ b/views/default/board.html
@@ -266,3 +266,37 @@
     </table>
 {{pass}}
 
+<a href="#dialog" name="modal">Janela Modal Simples</a>
+
+  <div id="dialog">
+    <a href="#" class="close">x</a><br />
+    <p>Janela Modal Simples. Aqui vai o conteúdo da sua Janela Modal Simples.</p>
+    <p>Janela Modal Simples. Aqui vai o conteúdo da sua Janela Modal Simples.</p>
+    <p>Janela Modal Simples. Aqui vai o conteúdo da sua Janela Modal Simples.</p>
+    <p>Janela Modal Simples. Aqui vai o conteúdo da sua Janela Modal Simples.</p>
+    <p>Janela Modal Simples. Aqui vai o conteúdo da sua Janela Modal Simples.</p>
+    <p>Janela Modal Simples. Aqui vai o conteúdo da sua Janela Modal Simples.</p>
+    <p>Janela Modal Simples. Aqui vai o conteúdo da sua Janela Modal Simples.</p>
+    <p>Janela Modal Simples. Aqui vai o conteúdo da sua Janela Modal Simples.</p>
+    <p>Janela Modal Simples. Aqui vai o conteúdo da sua Janela Modal Simples.</p>
+    <p>Janela Modal Simples. Aqui vai o conteúdo da sua Janela Modal Simples.</p>
+    <p>Janela Modal Simples. Aqui vai o conteúdo da sua Janela Modal Simples.</p>
+    <p>Janela Modal Simples. Aqui vai o conteúdo da sua Janela Modal Simples.</p>
+    <p>Janela Modal Simples. Aqui vai o conteúdo da sua Janela Modal Simples.</p>
+    <p>Janela Modal Simples. Aqui vai o conteúdo da sua Janela Modal Simples.</p>
+    <p>Janela Modal Simples. Aqui vai o conteúdo da sua Janela Modal Simples.</p>
+    <p>Janela Modal Simples. Aqui vai o conteúdo da sua Janela Modal Simples.</p>
+    <p>Janela Modal Simples. Aqui vai o conteúdo da sua Janela Modal Simples.</p>
+    <p>Janela Modal Simples. Aqui vai o conteúdo da sua Janela Modal Simples.</p>
+    <p>Janela Modal Simples. Aqui vai o conteúdo da sua Janela Modal Simples.</p>
+    <p>Janela Modal Simples. Aqui vai o conteúdo da sua Janela Modal Simples.</p>
+    <p>Janela Modal Simples. Aqui vai o conteúdo da sua Janela Modal Simples.</p>
+    <p>Janela Modal Simples. Aqui vai o conteúdo da sua Janela Modal Simples.</p>
+    <p>Janela Modal Simples. Aqui vai o conteúdo da sua Janela Modal Simples.</p>
+    <p>Janela Modal Simples. Aqui vai o conteúdo da sua Janela Modal Simples.</p>
+    <p>Janela Modal Simples. Aqui vai o conteúdo da sua Janela Modal Simples.</p>
+  </div>
+  <!-- Fim Janela Modal com Bloco de Nota -->
+
+  <!-- Máscara para cobrir a tela -->
+    <div id="mask"></div>
