--- a/views/default/layout_base.html
+++ b/views/default/layout_base.html
@@ -173,6 +173,65 @@
             {{ elif request.function == "board": }}
             <script src='{{=URL("static","js/jquery.livesearch.js")}}'></script>
             <script async defer src='{{=URL("static","js/board.js")}}'></script>
+
+<script async defer type="text/javascript">
+
+$(document).ready(function() {
+
+    $('a[name=modal]').click(function(e) {
+        e.preventDefault();
+
+        var id = $(this).attr('href');
+
+        var maskHeight = $(document).height();
+        var maskWidth = $(window).width();
+
+        $('#mask').css({'width':maskWidth,'height':maskHeight});
+
+        // $('#mask').fadeIn(1000);
+        $('#mask').fadeTo("slow",0.6);
+
+        //Get the window height and width
+        // var winH = $(window).height();
+        // var winW = $(window).width();
+
+        // $(id).css('top',  winH/2-$(id).height()/2);
+        // $(id).css('left', winW/2-$(id).width()/2);
+
+        $(id).fadeIn(1000);
+
+        $('html,body').animate({ scrollTop: $("#header").offset().top - (200) }, 1500);
+
+    });
+
+    $('#dialog .close').click(function (e) {
+        e.preventDefault();
+
+        $('#mask').hide();
+        $('#dialog').hide();
+    });
+
+    $('#mask').click(function () {
+        $(this).hide();
+        $('#dialog').hide();
+    });
+
+    $(window).resize(function(){
+
+        $('#dialog').css({
+            position:'absolute',
+            left: ($(window).width() - $('#dialog').outerWidth())/2,
+            // top: ($(window).height() - $('#dialog').outerHeight())/2
+        });
+    });
+    // To initially run the function:
+    $(window).resize();
+
+});
+
+</script>
+
+
             {{ elif request.function == "statistics": }}
             <script src='{{=URL("static","js/highcharts/highcharts.js")}}'></script>
             <script src='{{=URL("static","js/highcharts/modules/exporting.js")}}'></script>
