--- a/views/default/index.html
+++ b/views/default/index.html
@@ -15,7 +15,7 @@
   <!-- Always force latest IE rendering engine
        (even in intranet) & Chrome Frame
        Remove this if you use the .htaccess -->
-     
+
   <meta charset="utf-8" />
 
   <!-- http://dev.w3.org/html5/markup/meta.name.html -->
@@ -54,7 +54,7 @@
 
 <body>
 <a href="https://github.com/gustavox4ids/scrumforme" target="_blank" class="navbar-fixed-top"><img style="-webkit-user-select: none; position: absolute; top: 0; right: 0; border: 0; z-index:9999;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" width="127" height="127"></a>
-     
+
     <div class="container">
       <div class="content">
 
@@ -72,7 +72,20 @@
                   <p>{{=T("The Scrumforme meant to be easy, organized and accessible.")}}</p>
                   <p>{{=T("Inspired by Agile methodology using Scrum and Kanban simplifying teamwork.")}}</p>
                   {{ if not auth.is_logged_in(): }}
-                  <a href='{{=URL(c="default", f="user", args="register")}}' id="register" class="btn btn-large btn-primary">{{=T("Sign up")}}</a>
+                  <!-- <a href='{{=URL(c="default", f="user", args="register")}}' id="register" class="btn btn-large btn-primary">{{=T("Sign up")}}</a> -->
+                  <script src="http://cdn.jotfor.ms/static/feedback2.js?3.1.117" type="text/javascript">
+                    new JotformFeedback({
+                    formId:'31161179003645',
+                    base:'http://jotformz.com/',
+                    windowTitle:'{{=T("Join the beta test")}}',
+                    background:'#FFA500',
+                    fontColor:'#FFFFFF',
+                    type:false,
+                    height:500,
+                    width:700
+                    });
+                  </script>
+                  <a id="register" class="btn btn-large btn-primary lightbox-31161179003645">{{=T("Join the beta test")}}</a>
                   {{else:}}
                   <a href='{{=URL("projects")}}' id="register" class="btn btn-large btn-primary">{{=T("My Projects")}}</a>
                   {{pass}}
