--- a/views/default/board.html
+++ b/views/default/board.html
@@ -24,8 +24,7 @@
         task_no_exist : '{{=T("first insert the card content.")}}',
         team_page : '{{=T("Team Page")}}',
         card_assign : '{{=T("Assign this card to a member of team before moving it")}}',
-        type_error : 'error',
-        type_success : 'success',
+        started_in : '{{=T("Started in")}}',
     },
     date = {
         sprint_started : '{{=sprint.started}}',
@@ -289,7 +288,7 @@
         </div><!--/span-->
         <div class="span9">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="icon-remove"></i></button>
-            <div id="card_messages">
+            <div id="modal_messages">
             </div>
         </div><!--/span-->
     </div><!--/row-->
