--- a/views/default/projects.html
+++ b/views/default/projects.html
@@ -1,5 +1,13 @@
 {{extend 'default/layout_base.html'}}
-
+<script>
+    // global variables
+    var url = {
+        delete_project : '{{=URL(f="delete_project")}}',
+    },
+    msg = {
+        confirmRemove: '{{=T("Are you sure you want to delete this project?")}}',
+    }
+</script>
 <div id="sub-header-content">
     <div id="content-header">
         <div id="breadcrumb">
@@ -35,7 +43,10 @@
                 <h3>{{=T('My Projects')}} <span class="label">{{=len(person_projects)}}</span></a></h3>
                 <ul>
                 {{for i in person_projects:}}
-                    <li class='{{=g_current_page("default/product_backlog/%s" %i.id,"active")}}'><a href='{{=URL(c="default",f="product_backlog",args=[i.id])}}'>{{=i.name}}</a></li>
+                    <li class='{{=g_current_page("default/product_backlog/%s" %i.id,"active")}}'>
+                        <a href='{{=URL(c="default",f="product_backlog",args=[i.id])}}'>{{=i.name}}</a>
+                        <button data-project="{{=i.id}}" class="delete_project btn btn-danger btn-mini">{{=T("delete")}}</button>
+                    </li>
                 {{pass}}
                 </ul>
             {{pass}}
